mise en place de event-driving

--- a/backend-spring/src/main/resources/application.properties
+++ b/backend-spring/src/main/resources/application.properties
@@ -7,6 +7,16 @@ logging.file.path=logs
 logging.level.com.rawbank.reclamations=DEBUG
 logging.level.org.springframework.web=INFO
 
+# Kafka (valeurs par défaut locales)
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+# Désérialisation/Serialization (utilisées via KafkaConfig)
+app.kafka.topics.complaints-raw=${APP_KAFKA_TOPIC_COMPLAINTS_RAW:complaints_raw}
+
+# Groupes dédiés pour chaque worker (afin que chacun reçoive tous les messages)
+app.kafka.groups.powerautomate=${SPRING_KAFKA_GROUP_POWERAUTOMATE:reclamations-pa-worker}
+app.kafka.groups.indexer=${SPRING_KAFKA_GROUP_INDEXER:reclamations-indexer}
+app.kafka.groups.audit=${SPRING_KAFKA_GROUP_AUDIT:reclamations-audit}
+
 ## Authentification SharePoint (utilise .env si non défini ici ou via variables d'environnement)
 # sharepoint.auth.url=https://test.rawapigw.rawbank.cd/sharepoint-services/authenticate
 # sharepoint.auth.username=YXBwbW9iaWxl
