--- a/backend-spring/src/main/resources/application.properties
+++ b/backend-spring/src/main/resources/application.properties
@@ -9,6 +9,12 @@ logging.level.org.springframework.web=INFO
 
 # Kafka (valeurs par défaut locales)
 spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+# Sécurité Kafka (SASL SCRAM) — chargée via .env/déploiement
+spring.kafka.properties.security.protocol=${SPRING_KAFKA_SECURITY_PROTOCOL:SASL_PLAINTEXT}
+spring.kafka.properties.sasl.mechanism=${SPRING_KAFKA_SASL_MECHANISM:SCRAM-SHA-512}
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="${SPRING_KAFKA_USERNAME:app}" password="${SPRING_KAFKA_PASSWORD:app-secret}";
+spring.kafka.properties.ssl.truststore.location=${SPRING_KAFKA_SSL_TRUSTSTORE_LOCATION:}
+spring.kafka.properties.ssl.truststore.password=${SPRING_KAFKA_SSL_TRUSTSTORE_PASSWORD:}
 # Désérialisation/Serialization (utilisées via KafkaConfig)
 app.kafka.topics.complaints-raw=${APP_KAFKA_TOPIC_COMPLAINTS_RAW:complaints_raw}
 
