--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,23 @@
-# --- Kafka (Bitnami KRaft + SASL/SCRAM) ---
-KAFKA_USERNAME=app
-KAFKA_PASSWORD=app-secret
-# CLIENT listener security protocol for advertised CLIENT listener: SASL_PLAINTEXT or SASL_SSL
-KAFKA_CLIENT_SECURITY_PROTOCOL=SASL_PLAINTEXT
+## --- Kafka Sécurisé (SASL_SSL + SCRAM) ---
+# Utilisateur SCRAM (créé par kafka-init ou manuellement)
+SPRING_KAFKA_USERNAME=app
+SPRING_KAFKA_PASSWORD=app-secret
+# Protocole côté application: PLAINTEXT en dev, SASL_SSL en sécurisé
+SPRING_KAFKA_SECURITY_PROTOCOL=PLAINTEXT
+SPRING_KAFKA_SASL_MECHANISM=SCRAM-SHA-512
+SPRING_KAFKA_SASL_JAAS_CONFIG=org.apache.kafka.common.security.scram.ScramLoginModule required username="app" password="app-secret";
 
-# TLS (optionnel) pour Kafka – utilisé avec l'override docker-compose.kafka-ssl.yml
-KAFKA_SSL_KEYSTORE_PASSWORD=changeit
-KAFKA_SSL_TRUSTSTORE_PASSWORD=changeit
+# TLS auto-signé (DEV). Remplacer par certificats officiels en PROD.
+KAFKA_SSL_KEYSTORE_PASSWORD=ChangeItKeystore123!
+KAFKA_SSL_KEY_PASSWORD=ChangeItKey123!
+KAFKA_SSL_TRUSTSTORE_PASSWORD=ChangeItTrust123!
+SPRING_KAFKA_SSL_TRUSTSTORE_LOCATION=./infra/kafka/ssl/kafka.truststore.jks
+SPRING_KAFKA_SSL_TRUSTSTORE_PASSWORD=${KAFKA_SSL_TRUSTSTORE_PASSWORD}
 
-# --- Elasticsearch/Kibana security ---
+# KRaft cluster id (cp-kafka) — générer 22 caractères Base64/UUID tronqué
+KAFKA_CLUSTER_ID=replace-with-random-22chars
+
+## --- Elasticsearch/Kibana security ---
 # Password for built-in elastic superuser (used once by es_setup to set kibana_system password)
 ELASTIC_PASSWORD=changeme
 # Password to set for kibana_system user (used by Kibana to connect to ES)
@@ -18,8 +27,8 @@ KIBANA_SYSTEM_PASSWORD=kbn-secret
 ES_HTTP_KEYSTORE_PASSWORD=changeit
 ES_HTTP_TRUSTSTORE_PASSWORD=changeit
 
-# --- External systems (mock) ---
+## --- External systems (mock) ---
 EXTERNAL_ACCOUNTS_BASE_URL=http://localhost:9090
 
-# Optional: JVM opts for ES (override if you have more RAM)
+## Optional: JVM opts for ES (override if you have more RAM)
 # ES_JAVA_OPTS=-Xms1g -Xmx1g
