--- a/backend-spring/pom.xml
+++ b/backend-spring/pom.xml
@@ -54,6 +54,18 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>1.20.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>kafka</artifactId>
+      <version>1.20.1</version>
+      <scope>test</scope>
+    </dependency>
     <!-- Chargement de .env pour les identifiants d'API externe -->
     <dependency>
       <groupId>io.github.cdimascio</groupId>
