--- a/backend-spring/pom.xml
+++ b/backend-spring/pom.xml
@@ -72,6 +72,12 @@
       <artifactId>dotenv-java</artifactId>
       <version>3.0.0</version>
     </dependency>
+    <!-- JSON logging for Elasticsearch ingestion -->
+    <dependency>
+      <groupId>net.logstash.logback</groupId>
+      <artifactId>logstash-logback-encoder</artifactId>
+      <version>7.4</version>
+    </dependency>
   </dependencies>
 
   <build>
