--- a/backend-spring/src/main/resources/application.properties
+++ b/backend-spring/src/main/resources/application.properties
@@ -8,16 +8,20 @@ logging.level.com.rawbank.reclamations=DEBUG
 logging.level.org.springframework.web=INFO
 spring.kafka.admin.fail-fast=false
 
+# Port applicatif (permet de surcharger via variable d'env PORT)
+# Par défaut 8282 pour éviter le conflit avec 8081
+server.port=${PORT:8282}
+
 # Kafka (valeurs par défaut locales)
 spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
-# Sécurité Kafka — bascule DEV/PROD via env
-# DEV local: PLAINTEXT (par défaut). PROD sécurisé: SASL_SSL + SCRAM-SHA-512.
-spring.kafka.properties.security.protocol=${SPRING_KAFKA_SECURITY_PROTOCOL:PLAINTEXT}
-spring.kafka.properties.sasl.mechanism=${SPRING_KAFKA_SASL_MECHANISM:SCRAM-SHA-512}
-spring.kafka.properties.sasl.jaas.config=${SPRING_KAFKA_SASL_JAAS_CONFIG:}
-spring.kafka.properties.ssl.truststore.location=${SPRING_KAFKA_SSL_TRUSTSTORE_LOCATION:}
-spring.kafka.properties.ssl.truststore.password=${SPRING_KAFKA_SSL_TRUSTSTORE_PASSWORD:}
-spring.kafka.properties.ssl.endpoint.identification.algorithm=${SPRING_KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM:HTTPS}
+# Kafka sécurité désactivée pour environnement DEV actuel (PLAINTEXT uniquement)
+spring.kafka.properties.security.protocol=PLAINTEXT
+# Nettoyage des anciennes clés de sécurité (non utilisées en PLAINTEXT)
+spring.kafka.properties.sasl.mechanism=
+spring.kafka.properties.sasl.jaas.config=
+spring.kafka.properties.ssl.truststore.location=
+spring.kafka.properties.ssl.truststore.password=
+spring.kafka.properties.ssl.endpoint.identification.algorithm=
 # Désérialisation/Serialization (utilisées via KafkaConfig)
 app.kafka.topics.complaints-raw=${APP_KAFKA_TOPIC_COMPLAINTS_RAW:complaints_raw}
 
@@ -30,3 +34,4 @@ app.kafka.groups.audit=${SPRING_KAFKA_GROUP_AUDIT:reclamations-audit}
 # sharepoint.auth.url=https://test.rawapigw.rawbank.cd/sharepoint-services/authenticate
 # sharepoint.auth.username=YXBwbW9iaWxl
 # sharepoint.auth.password=cGFzc3dvcmRUZXN0
+
